syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows{
    string flow_id  = 1;
    int64 group_id  = 2;
    int64 sub_group_id  = 3;
    double amount  = 4;
    string currency  = 5;
    double int_rate  = 6;
    string repr_freq  = 7;
    int64 early_date  = 8;
    int64 maturity_date  = 9;
    string account_id  = 10;
    int64 start_date  = 11;
    string int_freq  = 12;
    string is_floating_rate  = 13;
    string floating_bnchmrk  = 14;
    string business_unit_id  = 15;
    string cust_id  = 16;
    string cust_name  = 17;
    string spread  = 18;
    string scheme_code  = 19;
    double min_ir  = 20;
    double max_ir  = 21;
    double principal_amount  = 22;
    double maturity_value  = 23;
    double ccy_conv_rate  = 24;
    string cust_cnrty_code  = 25;
    string cust_crd_rating  = 26;
    string cust_sec_code  = 27;
    string cust_indt_code = 28;
    string custom1 = 29;
    string custom2 = 30;
    int64 as_on_date = 31;
    int64 revised_mat_dt = 32;
    int64 days_passed_due = 33;
    repeated Cashflow cashflows=34;
}
